-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P3
-
Affects Version/s: 8, 9
-
Component/s: hotspot
-
b105
-
x86
-
generic
| Issue | Fix Version | Assignee | Priority | Status | Resolution | Resolved In Build |
|---|---|---|---|---|---|---|
| JDK-8230013 | 8u241 | David Buck | P3 | Resolved | Fixed | b01 |
| JDK-8234998 | emb-8u241 | David Buck | P3 | Resolved | Fixed | team |
1. There is some redundant checking in vm_version_x86.cpp left by accident.
2. The condition of one if() statement is missing a check for 'UseAESCTRIntrinsics'
3. Comments need to be added to stub generation code for readability and maintainability
2. The condition of one if() statement is missing a check for 'UseAESCTRIntrinsics'
3. Comments need to be added to stub generation code for readability and maintainability
- backported by
-
JDK-8230013 Minor corrections to the patch submitted for earlier bug id - 8143925
-
- Resolved
-
-
JDK-8234998 Minor corrections to the patch submitted for earlier bug id - 8143925
-
- Resolved
-
- relates to
-
JDK-8143925 enhancing CounterMode.crypt() for AESCrypt.implEncryptBlock()
-
- Resolved
-