8146581: Minor corrections to the patch submitted for earlier bug id - 8143925

Reviewed-by: kvn